<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_bill_amount">Enter bill amount.</string>
    <string name="ten_percent">10%</string>
    <string name="twenty_percent">20%</string>
    <string name="fifteen_percent">15%</string>
    <string name="tip_is">Tip is:</string>
    <string name="bill_amount">Enter Bill Amount.</string>
    <string name="total_amount">Total is:</string>
    <string name="custom">Custom</string>
    <string name="custom_tip">(Optional) Enter custom tip percentage.</string>

</resources>
